// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML elements <a> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 4,
    "filePath": "test-files/elements/a-invalid.html",
    "messages": Array [
      Object {
        "column": 11,
        "context": undefined,
        "line": 2,
        "message": "Element <div> is not permitted as content in <span>",
        "offset": 41,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 5,
        "context": undefined,
        "line": 5,
        "message": "Element <button> is not permitted as descendant of <a>",
        "offset": 133,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 11,
        "context": undefined,
        "line": 6,
        "message": "Element <button> is not permitted as descendant of <a>",
        "offset": 181,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 6,
      },
      Object {
        "column": 11,
        "context": undefined,
        "line": 9,
        "message": "Element <a> is not permitted as descendant of <a>",
        "offset": 271,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<!-- should be transparent -->
<span><a><div>foo</div></a></span>

<!-- should not allow interactive as content or descendant-->
<a><button type=\\"button\\">foo</button></a>
<a><span><button type=\\"button\\">foo</button></span></a>

<!-- should not allow nesting -->
<a><span><a>foo</a></span></a>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <a> valid markup 1`] = `Array []`;

exports[`HTML elements <abbr> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/elements/abbr-invalid.html",
    "messages": Array [
      Object {
        "column": 8,
        "context": undefined,
        "line": 2,
        "message": "Element <div> is not permitted as content in <abbr>",
        "offset": 46,
        "ruleId": "element-permitted-content",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- should not allow flow content -->
<abbr><div>foo</div></abbr>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <abbr> valid markup 1`] = `Array []`;

exports[`HTML elements <acronym> invalid markup 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/elements/acronym-invalid.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "<acronym> is deprecated",
        "offset": 32,
        "ruleId": "deprecated",
        "severity": 2,
        "size": 7,
      },
    ],
    "source": "<!-- element is deprecated -->
<acronym title=\\"foobar\\">FB</acronym>
",
    "warningCount": 0,
  },
]
`;

exports[`HTML elements <acronym> valid markup 1`] = `Array []`;
